@@ -345,6 +345,8 @@ version 5.0-alpha7 (2015-10-09)
     * Narrows JWTBearerGrant acceptance of assertions to signed JWT only.
     * Moves token_endpoint_auth_signing_alg field from OIDCClientMetadata to
       ClientMetadata to enable its use by generic OAuth 2.0 clients.
+    * Adds HostnameVerifier and SSLSocketFactory support to HTTPRequest (iss
+      #149).
     * Adds convenience Audience(URI) and Audience(Identifier) constructors.
     * Adds convenience Issuer(URI) and Issuer(Identifier) constructors.
     * Adds convenience ClientID(Identifier) constructor.
